@@ -108,6 +108,7 @@
     <ClCompile Include="Source\EU3World\EU3History.cpp" />
     <ClCompile Include="Source\EU3World\EU3Province.cpp" />
     <ClCompile Include="Source\EU3World\EU3Ruler.cpp" />
+    <ClCompile Include="Source\EU3World\EU3Tech.cpp" />
     <ClCompile Include="Source\EU3World\EU3World.cpp" />
     <ClCompile Include="Source\Log.cpp" />
     <ClCompile Include="Source\mappers.cpp" />
@@ -133,6 +134,7 @@
     <ClInclude Include="Source\EU3World\EU3History.h" />
     <ClInclude Include="Source\EU3World\EU3Province.h" />
     <ClInclude Include="Source\EU3World\EU3Ruler.h" />
+    <ClInclude Include="Source\EU3World\EU3Tech.h" />
     <ClInclude Include="Source\EU3World\EU3World.h" />
     <ClInclude Include="Source\Log.h" />
     <ClInclude Include="Source\mappers.h" />
