@@ -16,16 +16,17 @@ class EU3Ruler;
 class EU3History;
 class EU3Province;
 class EU3World;
+class EU3Tech;
 class CK2Province;
 
 class EU3Country
 {
 	public:
-		EU3Country(EU3World* world, string tag, string countryFile, date startDate);
+		EU3Country(EU3World* world, string tag, string countryFile, date startDate, const EU3Tech* techData);
 
 		void		output(FILE*);
 		
-		void		convert(const CK2Title*, const religionMapping& religionMap, const cultureMapping& cultureMap, const inverseProvinceMapping inverseProvinceMap);
+		void		convert(const CK2Title*, const religionMapping& religionMap, const cultureMapping& cultureMap, const inverseProvinceMapping& inverseProvinceMap);
 		void		determineLearningScore();
 		void		addAcceptedCultures();
 		void		determineGovernment(const religionGroupMapping& religionGroupMap);
@@ -63,6 +64,12 @@ class EU3Country
 		vector<EU3History*>	history;
 		vector<EU3Ruler*>		previousMonarchs;
 		string					techGroup;
+		double					governmentTech;
+		double					productionTech;
+		double					tradeTech;
+		double					navalTech;
+		double					landTech;
+
 		int						capital;
 		int						stability;
 		double					stabilityInvestment;
